--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 bot.name = SchedulerAssistantBot
 default.unit.id = 47b1d772-fb1c-48e8-ac49-bce2160cfb80
+spring.mvc.static-path-pattern=/static/**
 
 #db related settings
 spring.jpa.show-sql = false
