- start/end date for event templates  - data migration with liquibase  - unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.mvc.static-path-pattern=/static/**
 #db related settings
 spring.jpa.show-sql = false
 spring.datasource.driverClassName = org.postgresql.Driver
+spring.liquibase.enabled=true
