--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -4,7 +4,7 @@ bot.name = test
 bot.token = test
 report.url = test
 
+spring.liquibase.enabled=false
 
 #db related settings
 spring.jpa.show-sql = false
-spring.datasource.driverClassName = org.postgresql.Driver
